# homology

./: pyproject.toml
src/homology/: __init__.py  cli.py  embeddings.py  graph.py  holes.py  vault.py
src/homology.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_graph.py  test_holes.py  test_vault.py
